Fixed bug of header text overflow

--- a/assets/css/large-screen.css
+++ b/assets/css/large-screen.css
@@ -71,7 +71,7 @@
     h1 {
         color: white;
         position: static;
-        line-height: 10px;
+        line-height: 100px;
         font-size: 3em;
         margin-top: 0px;
     }
