--- a/assets/css/medium-screen.css
+++ b/assets/css/medium-screen.css
@@ -68,7 +68,7 @@
         color: white;
         position: static;
         line-height: 100px;
-        font-size: 3em;
+        font-size: 2em;
         margin-top: 0px;
     }
 
